[package]
name = "unishox-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "unishox2"
license = "GPL-3.0"
exclude = ['/Unishox2']
description = "Rust bindings for Unishox2 compression for short strings."
repository = "https://github.com/blockiosaurus/unishox-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"